--- a/index.html
+++ b/index.html
@@ -42,21 +42,19 @@
           </ul>
         </div>
 
+      <div class="col-md-12">
         <h3><span class="glyphicon glyphicon-equalizer" aria-hidden="true">Volunteer Experience</span></h3>
           <ul>
-            <li style="margin-left: 2.5em">Tax Volunteer</li>
-              <p style="margin-left: 3em" align="left" data-toggle="modal" data-target="#vol1"><a class=lendhand>+INFO</p></a>
-            <li style="margin-left: 2.5em">Lead Volunteer</li>
-              <p style="margin-left: 3em" align="left" data-toggle="modal" data-target="#vol2"><a class=lendhand>+INFO</p></a>
-            <li style="margin-left: 2.5em">IT Mentor</li>
-              <p style="margin-left: 3em" align="left" data-toggle="modal" data-target="#vol3"><a class=lendhand>+INFO</p></a>
+            <li style="margin-left: 1em">Tax Volunteer</li>
+              <p style="margin-left: 2em" align="left" data-toggle="modal" data-target="#vol1"><a class=lendhand>+INFO</p></a>
+            <li style="margin-left: 1em">Lead Volunteer</li>
+              <p style="margin-left: 2em" align="left" data-toggle="modal" data-target="#vol2"><a class=lendhand>+INFO</p></a>
+            <li style="margin-left: 1em">IT Mentor</li>
+              <p style="margin-left: 2em" align="left" data-toggle="modal" data-target="#vol3"><a class=lendhand>+INFO</p></a>
           </ul>
 
 
         <h3><span class="glyphicon glyphicon-star" aria-hidden="true">Skills</span></h3>
-
-      </div>
-
 
 <div class="container">
       <div class="row">
@@ -122,10 +120,11 @@
 
       </div>
   </div>
-  <div class="col-md-12">
+
     <div class="row text-muted">
-    <h3><span class="glyphicon glyphicon-globe" aria-hidden="true">Hobbies</span></h3>
+    <h3 style="margin-left: 0.5em"><span class="glyphicon glyphicon-globe" aria-hidden="true">Hobbies</span></h3>
     </div>
+  </div>
     <div class="container">
           <div class="row">
             <div class="col-sm-3">
