--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <h1 class="text-thin">Shirley Tang</h1>
           <h4>Accounting and Business Techonology Management Student</h4>
           <a href="mailto:tangs.shirley@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a>
+          <a href="pdf/myresume.pdf"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a>
         </div>
       </div>
 
@@ -31,7 +32,7 @@
       </div>
 
       <div class="col-md-12">
-        <h3><span class="glyphicon glyphicon-user" aria-hidden="true">Related Work Experience</span></h3>
+        <h3><span class="glyphicon glyphicon-user" aria-hidden="true">Relevant Work Experience</span></h3>
           <ul>
             <div class="col-md-6"><li>Co-op Tax Administrator</li></div> <div class="col-md-6 text-right">January 2017 - April 2017</div>
               <p style="margin-left: 2em" align="left" data-toggle="modal" data-target="#work1"><a class=lendhand>+INFO</p></a>
