--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <li>Tax Preparer (March 2016)</li>
                       <p style="margin-left: 2em">- Prepared tax returns on Taxprep</p>
                     </ul>
-                 <p style="margin-left: 1em">College de Maisonneuve, Montreal QC</p>
+                 <p style="margin-left: 1em"><strong>College de Maisonneuve, Montreal QC</strong></p>
                   <ul>
                     <li>Tax Preparer (March 2014)</li>
                       <p style="margin-left: 2em">- Prepared tax returns on Taxprep</p>
@@ -270,13 +270,13 @@
                     <h4 class="modal-title" id="myModalLabel">ROLES & RESPONSIBILITIES</h4>
                 </div>
                 <br />
-                <p style="margin-left: 1em">Concordia Hackathon (ConUHacks), Montreal QC</p>
+                <p style="margin-left: 1em"><strong>Concordia Hackathon (ConUHacks), Montreal QC</strong></p>
                   <ul>
                     <li>Captain (January 2017)</li>
-                     <p style="margin-left: 2em">Supervised and assisted volunteers</p>
-                     <p style="margin-left: 2em">Set up the banners, equipment, and hardware</p>
+                     <p style="margin-left: 2em">- Supervised and assisted volunteers</p>
+                     <p style="margin-left: 2em">- Set up the banners, equipment, and hardware</p>
                   </ul>
-                <p style="margin-left: 1em">John Molson MBA International Case Competition, Montreal QC</p>
+                <p style="margin-left: 1em"><strong>John Molson MBA International Case Competition, Montreal QC</strong></p>
                   <ul>
                     <li>Lead Volunteer (January 2016)</li>
                      <p style="margin-left: 2em">- Actively promoted the event on Facebook and in classrooms</p>
@@ -297,7 +297,7 @@
                     <h4 class="modal-title" id="myModalLabel">RESPONSIBILITIES</h4>
                 </div>
                 <br />
-            <p style="margin-left: 1em">Groupe Harmonie (InterACTion), Montreal QC</p>
+            <p style="margin-left: 1em"><strong>Groupe Harmonie (InterACTion), Montreal QC</strong></p>
                   <ul>
                     <li>Helped seniors in understanding the possible usage of technological tools (tablets and laptops)</li>
                     <li>Suggestedpossible solutions to IT issues and solve basic technological issues</li>
