--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <p style="margin-left: 1em"><strong>Groupe Harmonie (InterACTion), Montreal QC</strong></p>
                   <ul>
                     <li>Helped seniors in understanding the possible usage of technological tools (tablets and laptops)</li>
-                    <li>Suggestedpossible solutions to IT issues and solve basic technological issues</li>
+                    <li>Suggested possible solutions to IT issues and solved basic technological issues</li>
                     <li>Recommended ideas on latest technological products</li>
                   </ul>
                 <div class="modal-footer">
