--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="work.html">Experience</a>
-    <a href="Skills.html">Skills</a>
-    <a href="#">Hobbies</a>
-    <a href="#">Contact</a>
+    <a href="skills.html">Skills</a>
+    <a href="hobbies.html">Hobbies</a>
+    <a href="contact.html">Contact</a>
   </div>
   <h1><span style="font-size:30px;cursor:pointer" onclick="openNav();">&#9776; About me</span><h1>
 </body>
